2009-01-21  Thomas Thurman  <tthurman@gnome.org>

        and again

	* test/Makefile.am:
	* test/Makefile.am (added):

2009-01-21  Thomas Thurman  <tthurman@gnome.org>

        added bones of Veracity test suite

	* test/veracity/Makefile.am:
	* test/veracity/TODO:
	* test/veracity/unit/reparent.js:
	* test/veracity/unit/reparent.scm:
	* test/veracity/veracity.c:
	* test/veracity (added):
	* test/veracity/unit (added):
	* test/veracity/unit/reparent.scm (added):
	* test/veracity/unit/reparent.js (added):
	* test/veracity/build (added):
	* test/veracity/stress (added):
	* test/veracity/TODO (added):
	* test/veracity/veracity.c (added):
	* test/veracity/Makefile.am (added):

2009-01-10  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/theme.[ch]: add meta_theme_draw_frame_by_name, which
          is needed for the theme editor.

2008-12-26  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.144.

2008-12-26  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.89 release.

2008-12-25  Thomas Thurman  <tthurman@gnome.org>

	* src/include/all-keybindings.h: alt-F10 toggles maximisation,
          alt-F5 only restores.  Also rename "unmaximize" to "restore".
	* src/ui/frames.c: Rename "unmaximize" to "restore".
          Closes #343824.

2008-12-25  Frederic Peters  <fpeters@0d.be>

	* src/core/main.c: (main): added call to g_thread_init(), as ORBit2
	stopped doing it and Metacity is using gconf; closes #565517.

2008-12-24  Yanko Kaneti  <yaneti@declera.com>

	* src/metacity.schemas.in.in: add screenshot commands which had
          mistakenly been removed; closes #564343, Launchpad bug 298463,
          Red Hat bug 474635, and probably others.

2008-12-24  Thomas Thurman  <tthurman@gnome.org>

	* src/include/all-keybindings.h: fix move_to_corner_se

2008-12-21  Colin Walters  <walters@verbum.org>

	* src/core/window.c: windows which attempt to present themselves