@@ -1,7 +1,6 @@
 if BUILD_TESTS
 
 @INTLTOOL_DESKTOP_RULE@
-dfdfdf
 
 #INCLUDES=@METACITY_WINDOW_DEMO_CFLAGS@ @METACITY_MESSAGE_CFLAGS@ \
 #	-DMETACITY_ICON_DIR=\"$(pkgdatadir)/icons\" \
@@ -10,8 +9,10 @@ dfdfdf
 veracity_SOURCES= 				\
 	veracity.c
 
+bin_PROGRAMS=veracity
+
 ## don't install the test suite
-#noinst_PROGRAMS=veracity
+noinst_PROGRAMS=veracity
 
 veracity_LDADD= @METACITY_LIBS@
 
